--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 20%);
+  grid-template-columns: repeat(2, 300px);
   grid-gap: 30px;
   justify-content: center;
 }
@@ -24,20 +24,6 @@ body {
 }
 
 //responsive
-
-@media all and (max-width: 1200px) {
-  .grid {
-    grid-template-columns: repeat(2, 25%);
-    grid-gap: 30px;
-  }
-}
-
-@media all and (max-width: 1000px) {
-    .grid {
-      grid-template-columns: repeat(2, 35%);
-      grid-gap: 30px;
-    }
-  }
 
 @media all and (max-width: 700px) {
     .grid {
